--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text="Recording List is Empty\n\nClick Record to Start Recording"
+            android:text="@string/recording_list_is_empty"
             android:textAlignment="center"></TextView>
 
     </LinearLayout>
