--- a/app/src/main/res/menu/menu_context.xml
+++ b/app/src/main/res/menu/menu_context.xml
@@ -5,11 +5,11 @@
     <item
         android:id="@+id/action_rename"
         android:orderInCategory="100"
-        android:title="Rename"
+        android:title="@string/rename"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_delete"
         android:orderInCategory="200"
-        android:title="Delete"
+        android:title="@string/delete"
         app:showAsAction="never" />
 </menu>
