fix migrate storage crash

--- a/app/src/main/res/xml-ru/pref_general.xml
+++ b/app/src/main/res/xml-ru/pref_general.xml
@@ -1,7 +1,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <com.github.axet.androidlibrary.widgets.StoragePathPreference
-        android:defaultValue="Аудио Рекордер"
+        android:defaultValue="Audio Recorder"
         android:key="storage_path"
         android:summary="/sdcard/some/"
         android:title="Папка для хранения" />
