old phones api 9

--- a/app/src/main/res/xml-ru-v14/pref_general.xml
+++ b/app/src/main/res/xml-ru-v14/pref_general.xml
@@ -36,13 +36,13 @@
         android:summary="Режим записи"
         android:title="Режим" />
 
-    <CheckBoxPreference
+    <SwitchPreference
         android:defaultValue="true"
         android:key="call"
         android:summary="Останавливать запись на время разговора по телефону"
         android:title="Пауза на время разговора" />
 
-    <CheckBoxPreference
+    <SwitchPreference
         android:defaultValue="true"
         android:key="silence"
         android:summary="Включать беззвучный режим на время записи"
