--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -36,13 +36,13 @@
         android:summary="Recording channels"
         android:title="Mode" />
 
-    <SwitchPreference
+    <CheckBoxPreference
         android:defaultValue="true"
         android:key="call"
         android:summary="Stop recording on answering and continue on hangup"
         android:title="Pause recording during calls" />
 
-    <SwitchPreference
+    <CheckBoxPreference
         android:defaultValue="true"
         android:key="silence"
         android:summary="Put phone in 'silence mode' during recording"
