--- a/app/src/main/res/layout/recording.xml
+++ b/app/src/main/res/layout/recording.xml
@@ -123,7 +123,7 @@
                         android:src="@drawable/play"
                         android:tint="?attr/colorAccent" />
 
-                    <Space
+                    <View
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -135,7 +135,7 @@
                         android:src="@drawable/ic_create_black_24dp"
                         android:tint="?attr/colorAccent" />
 
-                    <Space
+                    <View
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -148,7 +148,7 @@
                         android:src="@drawable/share"
                         android:tint="?attr/colorAccent" />
 
-                    <Space
+                    <View
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
