--- a/app/src/main/res/layout/activity_recording.xml
+++ b/app/src/main/res/layout/activity_recording.xml
@@ -34,7 +34,7 @@
 
     </LinearLayout>
 
-    <com.github.axet.audiorecorder.widgets.PitchView
+    <com.github.axet.callrecorder.widgets.PitchView
         android:id="@+id/recording_pitch"
         android:layout_width="match_parent"
         android:layout_height="120dp"
@@ -110,7 +110,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="?attr/roundButton"
-                android:src="@drawable/ic_pause_24dp" />
+                android:src="@drawable/ic_pause_black_24dp" />
 
             <ImageButton
                 android:id="@+id/recording_done"
