--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <attr name="titleColor" format="color" />
-    <attr name="secondBackground" format="color" />
-    <attr name="roundButton" format="reference" />
+    <attr name="round_corners" format="reference" />
 </resources>
