--- a/app/src/main/res/drawable/ic_stop_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_stop_black_24dp.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="#FFffffff"
-        android:pathData="M6,19h4V5H6v14zm8,-14v14h4V5h-4z"/>
+        android:fillColor="#FF000000"
+        android:pathData="M6,6h12v12H6z"/>
 </vector>
