--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,46 +1,19 @@
 <resources>
 
-    <style name="AppThemeLight" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccentLight</item>
-        <item name="titleColor">@color/colorPrimary</item>
-        <item name="secondBackground">#c2c2c2</item>
-        <item name="roundButton">@drawable/round_button_light</item>
-        <item name="alertDialogTheme">@style/AppThemeDialogLight</item>
+    <style name="RecThemeLight" parent="AppThemeLight">
+        <item name="round_corners">@drawable/round_corners_light</item>
     </style>
 
-    <style name="AppThemeDialogLight" parent="@style/Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorAccent">@color/colorAccentLight</item>
+    <style name="RecThemeDark" parent="Theme.AppCompat">
+        <item name="round_corners">@drawable/round_corners_dark</item>
     </style>
 
-    <style name="AppThemeLight.NoActionBar">
+    <style name="RecThemeLight.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppThemeLight.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="android:textColorPrimary">@android:color/white</item>
-    </style>
-
-    <style name="AppThemeLight.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
-    </style>
-
-    <style name="AppThemeDark" parent="Theme.AppCompat">
-        <item name="colorPrimaryDark">@color/primary_dark_material_dark</item>
-        <item name="colorPrimary">@color/primary_material_dark</item>
-        <item name="colorAccent">@color/colorAccentDark</item>
-        <item name="titleColor">@android:color/primary_text_dark</item>
-        <item name="secondBackground">#151515</item>
-        <item name="roundButton">@drawable/round_button_dark</item>
-        <item name="alertDialogTheme">@style/AppThemeDialogDark</item>
-    </style>
-
-    <style name="AppThemeDialogDark" parent="@style/Theme.AppCompat.Dialog.Alert">
-        <item name="colorAccent">@color/colorAccentDark</item>
-    </style>
-
-    <style name="AppThemeDark.NoActionBar">
+    <style name="RecThemeDark.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
