--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -37,7 +37,7 @@
         android:title="Mode" />
 
     <ListPreference
-        android:defaultValue="1"
+        android:defaultValue="off"
         android:entries="@array/delete_text"
         android:entryValues="@array/delete_values"
         android:key="delete"
@@ -47,7 +47,7 @@
         android:title="Delete Recordings" />
 
     <ListPreference
-        android:defaultValue="1"
+        android:defaultValue="%s"
         android:entries="@array/format_text"
         android:entryValues="@array/format_values"
         android:key="format"
