--- a/app/src/main/res/xml-ru-v14/pref_general.xml
+++ b/app/src/main/res/xml-ru-v14/pref_general.xml
@@ -56,6 +56,12 @@
         android:summary="2015-11"
         android:title="Name Format" />
 
+    <SwitchPreference
+        android:defaultValue="true"
+        android:key="optimization"
+        android:summary="Отключить оптимизацию расхода батареи"
+        android:title="Оптимизация батареи" />
+
     <ListPreference
         android:defaultValue="Theme_White"
         android:entries="@array/themes_text"
