--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -56,6 +56,13 @@
         android:summary="2015-11"
         android:title="Name Format" />
 
+    <CheckBoxPreference
+        android:defaultValue="false"
+        android:key="optimization"
+        android:persistent="false"
+        android:summary="Disable Battery Optimization"
+        android:title="Battery Optimization" />
+
     <ListPreference
         android:defaultValue="Theme_White"
         android:entries="@array/themes_text"
