--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -6,6 +6,16 @@
         android:title="Storage Path" />
 
     <ListPreference
+        android:defaultValue="-1"
+        android:entries="@array/source_text"
+        android:entryValues="@array/source_values"
+        android:key="source"
+        android:negativeButtonText="@null"
+        android:positiveButtonText="@null"
+        android:summary="Select source for better quality"
+        android:title="Recording Source" />
+
+    <ListPreference
         android:defaultValue="16000"
         android:entries="@array/sample_rate_text"
         android:entryValues="@array/sample_rate_values"
