--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -21,6 +21,6 @@
     <item
         android:id="@+id/action_about"
         android:orderInCategory="100"
-        android:title="@string/about"
+        android:title="@string/menu_about"
         app:showAsAction="never" />
 </menu>
