--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -70,7 +70,7 @@
         android:key="optimization"
         android:persistent="false"
         android:summary="Prevent app to be removed from memory"
-        android:title="Battery Optimization" />
+        android:title="Disable Battery Optimization" />
 
     <ListPreference
         android:defaultValue="Theme_White"
