--- a/app/src/main/res/xml-ja/pref_general.xml
+++ b/app/src/main/res/xml-ja/pref_general.xml
@@ -65,6 +65,12 @@
         android:summary="2015-11"
         android:title="名前の形式" />
 
+    <SwitchPreferenceCompat
+        android:defaultValue="false"
+        android:key="done_notification"
+        android:summary="Show rename / favorite dialog after call ended"
+        android:title="Recent Call Dialog" />
+
     <com.github.axet.androidlibrary.widgets.OptimizationPreferenceCompat
         android:defaultValue="false"
         android:key="optimization"
