--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -56,13 +56,11 @@
         android:summary=""
         android:title="@string/pref_delete_title" />
 
-    <ListPreference
+    <com.github.axet.callrecorder.widgets.NameFormatPreferenceCompat
         android:defaultValue="%s"
         android:entries="@array/format_text"
         android:entryValues="@array/format_values"
         android:key="format"
-        android:negativeButtonText="@null"
-        android:positiveButtonText="@null"
         android:summary=""
         android:title="@string/pref_nameformat_title" />
 
