--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -77,6 +77,13 @@
         android:summary="@string/pref_optimization_summary"
         android:title="@string/pref_optimization_title" />
 
+    <com.github.axet.callrecorder.widgets.MixerPathsPreferenceCompat
+        android:defaultValue="false"
+        android:key="mixer_paths"
+        android:persistent="false"
+        android:summary="@string/pref_mixerpaths_summary"
+        android:title="@string/pref_mixerpaths_title" />
+
     <ListPreference
         android:defaultValue="Theme_White"
         android:entries="@array/themes_text"
